--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -5,9 +5,18 @@
 </ion-header>
 
 <ion-content>
+  <div *ngIf="isshow ; else pass">
+    <ion-item>
+      <ion-label>enter new password</ion-label>
+      <ion-input [(ngModel)]="passwordnew"></ion-input>
+    </ion-item>
+    <ion-button (click)="submit()">create</ion-button>
+</div>
+<ng-template  #pass>
   <ion-item>
     <ion-label>Gmail</ion-label>
     <ion-input [(ngModel)]="usermail"></ion-input>
   </ion-item>
   <ion-button (click)="submit()">Submit</ion-button>
+</ng-template>
 </ion-content>
