--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,4 +4,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true"> </ion-content>
+<ion-content [fullscreen]="true">
+  <ion-icon class="cogicon" name="cog-outline"></ion-icon>
+  <ion-item> 
+     <h1>Home</h1>
+  </ion-item>
+  <ion-item>
+  <ion-input line="none">
+    <ion-icon class="sarchicon" name="search-outline"></ion-icon>
+    <P>Company,category,expense ....</P>
+  </ion-input>   
+</ion-item>     
+   </ion-content>
+   
