--- a/src/app/pages/sign-up/sign-up.page.html
+++ b/src/app/pages/sign-up/sign-up.page.html
@@ -25,4 +25,10 @@
     </ion-select>
   </ion-item>
   <ion-button (click)="Signup()">Submit</ion-button>
+  <ion-button (click)="Save()">save</ion-button>
+    <div>{{totalEmail}} </div>
+    <div>hello</div>
+    <div>{{sign-up.mobile}}</div>
+    <div>{{sign-up.gender}}</div>
+
 </ion-content>
