--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,27 +1,18 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content{
+  .cogicon{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 0%;
+  }
+  ion-input{
+  border: 2px solid grey;
+  border-radius: 10px;
+  .sarchicon{
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+  }
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
